--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -6,178 +6,67 @@
 
 <body>
 	<!-- 导航 -->
-	<nav th:replace="_fragments :: menu(3)"></nav>
-	<!-- 中间内容 -->
-	<div class="m-container-small m-padded-tb-big animated fade">
+	<nav th:replace="_fragments :: menu(2)"></nav>
+
+	<div class="ui attached pointing menu">
 		<div class="ui container">
-			<!-- header -->
-			<div class="ui top attached segment">
-				<div class="ui middle aligned two column grid">
-					<div class="column">
-						<h3 class="ui teal header">分类</h3>
-					</div>
-					<div class="right aligned column">
-						共<h2 class="ui orange header m-inline-block m-text-thin">14</h2>个
-					</div>
-				</div>
+			<div class="right menu">
+				<a class="item" href="#" th:href="@{/admin/types/input}">新增</a>
+				<a class="active teal item" href="#" th:href="@{/admin/types}">列表</a>
 			</div>
-			<div class="ui attached segment m-padded-tb-large">
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic teal button">思考</a>
-					<div class="ui basic teal left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a class="ui basic  button">思考</a>
-					<div class="ui basic  left pointing label">24</div>
-				</div>
-			</div>
-			<div class="ui top attached teal segment">
-				<div class="ui padded vertical segment m-padded-tb-big <m-mobile-lr-clear></m-mobile-lr-clear>">
-					<div class="ui mobile reversed grid stackable">
-						<div class="ui eleven wide column">
-							<h3 class="ui header">夏目漱石心</h3>-
-							<p>如果我是想象的那种人，我就不会那么痛苦了.如果我是想象的那种人，我就不会那么痛苦了.如果我是想象的那种人，我就不会那么痛苦了</p>
-							<div class="ui stackable grid">
-								<div class="eleven wide column">
-									<div class="ui mini horizontal link list">
-										<div class="item">
-											<img class="ui avatar image" src="https://unsplash.it/100/100?image=1005" alt=""/>
-											<div class="content">
-												<a class="header">温伟忠</a>
-											</div>
-										</div>
-										<div class="item">
-											<i class="calendar icon"></i> 2017-10-01
-										</div>
-										<div class="item">
-											<i class="eye icon"></i>2000
-										</div>
-									</div>
-								</div>
-								<div class="right five wide column">
-									<a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-								</div>
+		</div>
+	</div>
+	<!-- 中间内容 -->
+	<div class="m-container-small m-padded-tb-big">
+		<div class="ui container">
+			<div class="table-container">
+				<table class="ui compact celled teal table">
+					<thead>
+					<tr>
+						<th></th>
+						<th>名称</th>
+						<th>操作</th>
+					</tr>
+					</thead>
+					<tbody>
+					<tr th:each="type, iterStat : ${pageInfo.list}">
+						<td th:text="${iterStat.count}"></td>
+						<td th:text="${type.name}"></td>
+						<td>
+							<a href="#" th:href="@{/admin/types/{id}input(id=${type.id})" class="ui mini teal basic button">新增</a>
+							<a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button">删除</a>
+						</td>
+					</tr>
+					</tbody>
+					<tfoot>
+					<tr>
+						<th colspan="7">
+							<div class="ui mini pagination menu"  >
+								<div class="item"><a th:href="@{/admin/types}">首页</a></div>
+								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a></div>
+								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a></div>
+								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.pages})}">尾页</a></div>
 							</div>
-						</div>
-						<div class="ui five wide column">
-							<a href="#" target="_blank">
-								<img class="ui rounded image" src="https://unsplash.it/800/400?image=1005" alt=""/>
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="ui padded vertical segment m-padded-tb-big <m-mobile-lr-clear></m-mobile-lr-clear>">
-					<div class="ui mobile reversed grid stackable">
-						<div class="ui eleven wide column">
-							<h3 class="ui header">夏目漱石心</h3>-
-							<p>如果我是想象的那种人，我就不会那么痛苦了.如果我是想象的那种人，我就不会那么痛苦了.如果我是想象的那种人，我就不会那么痛苦了</p>
-							<div class="ui stackable grid">
-								<div class="eleven wide column">
-									<div class="ui mini horizontal link list">
-										<div class="item">
-											<img class="ui avatar image" src="https://unsplash.it/100/100?image=1005" alt=""/>
-											<div class="content">
-												<a class="header">温伟忠</a>
-											</div>
-										</div>
-										<div class="item">
-											<i class="calendar icon"></i> 2017-10-01
-										</div>
-										<div class="item">
-											<i class="eye icon"></i>2000
-										</div>
-									</div>
-								</div>
-								<div class="right five wide column">
-									<a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-								</div>
-							</div>
-						</div>
-						<div class="ui five wide column">
-							<a href="#" target="_blank">
-								<img class="ui rounded image" src="https://unsplash.it/800/400?image=1005" alt=""/>
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="ui padded vertical segment m-padded-tb-big <m-mobile-lr-clear></m-mobile-lr-clear>">
-					<div class="ui mobile reversed grid stackable">
-						<div class="ui eleven wide column">
-							<h3 class="ui header">夏目漱石心</h3>-
-							<p>如果我是想象的那种人，我就不会那么痛苦了.如果我是想象的那种人，我就不会那么痛苦了.如果我是想象的那种人，我就不会那么痛苦了</p>
-							<div class="ui stackable grid">
-								<div class="eleven wide column">
-									<div class="ui mini horizontal link list">
-										<div class="item">
-											<img class="ui avatar image" src="https://unsplash.it/100/100?image=1005" alt=""/>
-											<div class="content">
-												<a class="header">温伟忠</a>
-											</div>
-										</div>
-										<div class="item">
-											<i class="calendar icon"></i> 2017-10-01
-										</div>
-										<div class="item">
-											<i class="eye icon"></i>2000
-										</div>
-									</div>
-								</div>
-								<div class="right five wide column">
-									<a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-								</div>
-							</div>
-						</div>
-						<div class="ui five wide column">
-							<a href="#" target="_blank">
-								<img class="ui rounded image" src="https://unsplash.it/800/400?image=1005" alt=""/>
-							</a>
-						</div>
-					</div>
+							<a href="#" th:href="@{/admin/types/input}" class="ui mini right floated teal basic button">新增</a>
+						</th>
+					</tr>
+					</tfoot>
+				</table>
+
+				<div class="ui segment m-inline-block">
+					<p >当前第<span th:text="${pageInfo.pageNum}"></span>页，总<span th:text="${pageInfo.pages}"></span>页，共<span th:text="${pageInfo.total}"></span>条记录</p>
 				</div>
 
-			</div>
-			
-			<!-- 分页 -->
-			<div class="ui bottom attached segment">
-				<div class="ui middle aligned two column grid">
-					<div class="column">
-						<button class="ui mini teal basic button">上一页</button>
-					</div>
-					<div class="right aligned column">
-						<button class="ui mini teal basic button">下一页</button>
-					</div>
+				<div class="ui success message" th:unless="${#strings.isEmpty(msg)}">
+					<i class="close icon"></i>
+					<div class="header">提示：</div>
+					<p th:text="${msg}">恭喜，操作成功！</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
+
 	<!-- 底部 -->
 	<footer th:replace="_fragments :: footer"></footer>
 	<script th:replace="_fragments :: script"></script>
@@ -187,6 +76,17 @@
 	$('.menu.toggle').click(function (){
 		/* 将css样式进行切换 */
 		$('.m-item').toggleClass('m-mobile-hide');
+	});
+	$('.ui.dropdown').dropdown({
+		on: 'hover'
+	});
+
+	/*消息提示关闭初始化*/
+	$('.message.close')
+		.on('click', function (){
+			$(this)
+				.closest('.message')
+				.transition('fade');
 	});
 </script>
 </body>
