--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragments :: head(~{::title})">
+<head th:replace="admin/_fragments :: head(~{::title})">
 	<title>标签管理</title>
 </head>
 
 <body>
 	<!-- 导航 -->
-	<nav th:replace="_fragments :: menu(2)"></nav>
+	<nav th:replace="admin/_fragments :: menu(2)"></nav>
 
 	<div class="ui attached pointing menu">
 		<div class="ui container">
@@ -20,7 +20,7 @@
 	<div class="m-container-small m-padded-tb-big">
 		<div class="ui container">
 			<div class="table-container">
-				<table class="ui compact celled teal table">
+				<table class="ui center aligned compact celled teal table">
 					<thead>
 					<tr>
 						<th></th>
@@ -33,30 +33,25 @@
 						<td th:text="${iterStat.count}"></td>
 						<td th:text="${type.name}"></td>
 						<td>
-							<a href="#" th:href="@{/admin/types/{id}input(id=${type.id})" class="ui mini teal basic button">新增</a>
+							<a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui mini teal basic button">修改</a>
 							<a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button">删除</a>
 						</td>
 					</tr>
 					</tbody>
 					<tfoot>
-					<tr>
+					<tr class="ui center aligned">
 						<th colspan="7">
-							<div class="ui mini pagination menu"  >
-								<div class="item"><a th:href="@{/admin/types}">首页</a></div>
-								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a></div>
+							<div class="ui center aligned pagination menu">
+								<div class="left aligned item"><a th:href="@{/admin/types}">首页</a></div>
+								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a> </div>
+								<div class="item"><p><span th:text="${pageInfo.pageNum}"></span>/<span th:text="${pageInfo.pages}"></span></p></div>
 								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a></div>
-								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.pages})}">尾页</a></div>
+								<div class="right aligned item"><a th:href="@{/admin/types(pagenum=${pageInfo.pages})}">尾页</a></div>
 							</div>
-							<a href="#" th:href="@{/admin/types/input}" class="ui mini right floated teal basic button">新增</a>
 						</th>
 					</tr>
 					</tfoot>
 				</table>
-
-				<div class="ui segment m-inline-block">
-					<p >当前第<span th:text="${pageInfo.pageNum}"></span>页，总<span th:text="${pageInfo.pages}"></span>页，共<span th:text="${pageInfo.total}"></span>条记录</p>
-				</div>
-
 				<div class="ui success message" th:unless="${#strings.isEmpty(msg)}">
 					<i class="close icon"></i>
 					<div class="header">提示：</div>
