--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -23,10 +23,12 @@
             <a href="#" th:href="@{/archives}" class="m-item m-mobile-hide item" th:classappend="${n==4} ? 'active'"><i class=" clone icon"></i>归档</a>
             <a href="#" th:href="@{/about}" class="m-item m-mobile-hide item" th:classappend="${n==5} ? 'active'"><i class=" info icon"></i>关于我</a>
             <div class="right m-item item m-mobile-hide" >
-                <div class="ui icon inverted transparent input">
-                    <input type="text" placeholder="Search..." />
-                    <i class="search link icon"></i>
-                </div>
+                <form name="search" action="#" method="post" th:action="@{/search}" target="_blank">
+                    <div class="ui icon inverted transparent input m-margin-tb-tiny">
+                        <input type="text" placeholder="Search..." name="query" th:value="${query}">
+                        <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
