--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -61,6 +61,7 @@
 								<th>标题</th>
 								<th>类型</th>
 								<th>推荐</th>
+								<th>状态</th>
 								<th>更新时间</th>
 								<th>操作</th>
 							</tr>
@@ -71,9 +72,10 @@
 								<td th:text="${blog.title}">清单</td>
 								<td th:text="${blog.type.name}">认知升级</td>
 								<td th:text="${blog.recommend}">是</td>
+								<td th:text="${blog.published} ? '发布' : '草稿'">发布</td>
 								<td th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}">2017-10-05 09：25</td>
 								<td>
-									<a href="#" th:href="@{/admin/blogs/{id}/input=(id=${blog.id})}" class="ui mini teal button">编辑</a>
+									<a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal button">编辑</a>
 									<a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini red button">删除</a>
 								</td>
 							</tr>
