修复导航栏的bugs

--- a/src/main/resources/templates/admin/tags-input.html
+++ b/src/main/resources/templates/admin/tags-input.html
@@ -6,19 +6,18 @@
 <body>
     <!--导航-->
     <nav th:replace="admin/_fragments :: menu(3)"></nav>
-
-    <div class="ui attached pointing menu">
-        <div class="ui container">
-            <div class="right menu">
-                <a href="#" th:href="@{/admin/tags/input}" class="teal active item">发布</a>
-                <a href="#" th:href="@{/admin/tags}" class="item">列表</a>
-            </div>
-        </div>
-    </div>
-
+    <br>
     <!--中间内容-->
     <div class="m-container m-padded-tb-big">
         <div class="ui container">
+            <div class="ui attached pointing menu">
+                <div class="ui container">
+                    <div class="right menu">
+                        <a href="#" th:href="@{/admin/tags/input}" class="teal active item">发布</a>
+                        <a href="#" th:href="@{/admin/tags}" class="item">列表</a>
+                    </div>
+                </div>
+            </div>
             <form action="#" th:object="${tag}" th:action="*{id}==null ? @{/admin/tags} : @{/admin/tags/{id}(id=*{id})}"
                   method="post" class="ui form">
                 <input type="hidden" name="id" th:value="*{id}">
@@ -58,7 +57,7 @@
             $('.m-item').toggleClass('m-mobile-hide');
         });
 
-        $('.ui.dropdown').on({
+        $('.ui.dropdown').dropdown({
             on: 'hover'
         });
 
