--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -20,7 +20,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="table-container">
+
+		<div class="ui attached secondary segment">
 			<table class="ui center aligned compact celled teal table">
 				<thead>
 				<tr>
