--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -8,7 +8,7 @@
 <nav th:replace="admin/_fragments :: menu(2)"></nav>
 <br>
 <!--中间内容-->
-<div class="m-container m-padded-tb-big">
+<div class="m-container-small m-padded-tb-big">
     <div class="ui container">
         <div class="ui attached pointing menu">
             <div class="ui container">
@@ -18,30 +18,33 @@
                 </div>
             </div>
         </div>
-        <form action="#" th:object="${type}" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})}"
-              method="post" class="ui form">
-            <input type="hidden" name="id" th:value="*{id}">
-            <div class="required field">
-                <div class="ui left labeled input">
-                    <label class="ui teal basic label">名称</label>
-                    <input type="text" name="name" placeholder="分类名称" th:value="*{name}">
+        <div class="ui attached secondary segment ">
+            <form action="#" th:object="${type}" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})}"
+                  method="post" class="ui form">
+                <input type="hidden" name="id" th:value="*{id}">
+                <div class="required field">
+                    <div class="ui left labeled input">
+                        <label class="ui teal basic label">名称</label>
+                        <input type="text" name="name" placeholder="分类名称" th:value="*{name}">
+                    </div>
                 </div>
-            </div>
 
-            <div class="ui error message"></div><!--显示错误信息-->
+                <div class="ui error message"></div><!--显示错误信息-->
 
-            <div class="ui negative message" th:unless="${#strings.isEmpty(msg)}">
-                <i class="close icon"></i>
-                <div class="header">验证失败：</div>
-                <p th:text="${msg}">对不起，操作失败！</p>
-            </div>
+                <div class="ui negative message" th:unless="${#strings.isEmpty(msg)}">
+                    <i class="close icon"></i>
+                    <div class="header">验证失败：</div>
+                    <p th:text="${msg}">对不起，操作失败！</p>
+                </div>
 
-            <div class="ui right aligned container">
-                <button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
-                <button type="button" id="save-btn" class="ui secondary submit button">提交</button>
-            </div>
+                <div class="ui right aligned container">
+                    <button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
+                    <button type="button" id="save-btn" class="ui secondary submit button">提交</button>
+                </div>
 
-        </form>
+            </form>
+
+        </div>
     </div>
 </div>
 <br><br><br>
