--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -3,12 +3,10 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
 	<title>标签管理</title>
 </head>
-
 <body>
 	<!-- 导航 -->
 	<nav th:replace="admin/_fragments :: menu(2)"></nav>
 	<br>
-
 	<!-- 中间内容 -->
 	<div class="m-container-small m-padded-tb-big">
 		<div class="ui container">
@@ -20,53 +18,52 @@
 					</div>
 				</div>
 			</div>
-			<div class="table-container">
-				<table class="ui center aligned compact celled teal table">
-					<thead>
-					<tr>
-						<th></th>
-						<th>名称</th>
-						<th>操作</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr th:each="type, iterStat : ${pageInfo.list}">
-						<td th:text="${iterStat.count}"></td>
-						<td th:text="${type.name}"></td>
-						<td>
-							<a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui mini teal basic button">修改</a>
-							<a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button" onclick="return confirm('删除本分类及其属于分类的博客？')">删除</a>
-						</td>
-					</tr>
-					</tbody>
-					<tfoot>
-					<tr class="ui center aligned">
-						<th colspan="7">
-							<div class="ui center aligned pagination menu">
-								<div class="left aligned item"><a th:href="@{/admin/types}">首页</a></div>
-								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a> </div>
-								<div class="item"><p><span th:text="${pageInfo.pageNum}"></span>/<span th:text="${pageInfo.pages}"></span></p></div>
-								<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a></div>
-								<div class="right aligned item"><a th:href="@{/admin/types(pagenum=${pageInfo.pages})}">尾页</a></div>
-							</div>
-						</th>
-					</tr>
-					</tfoot>
-				</table>
-				<div class="ui success message" th:unless="${#strings.isEmpty(msg)}">
-					<i class="close icon"></i>
-					<div class="header">提示：</div>
-					<p th:text="${msg}">恭喜，操作成功！</p>
+			<div class="ui attached secondary segment ">
+				<div class="table-container">
+					<table class="ui center aligned compact celled teal table">
+						<thead>
+						<tr>
+							<th></th>
+							<th>名称</th>
+							<th>操作</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr th:each="type, iterStat : ${pageInfo.list}">
+							<td th:text="${iterStat.count}"></td>
+							<td th:text="${type.name}"></td>
+							<td>
+								<a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui mini teal basic button">修改</a>
+								<a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button" onclick="return confirm('删除本分类及其属于分类的博客？')">删除</a>
+							</td>
+						</tr>
+						</tbody>
+						<tfoot>
+						<tr class="ui center aligned">
+							<th colspan="7">
+								<div class="ui center aligned pagination menu">
+									<div class="left aligned item"><a th:href="@{/admin/types}">首页</a></div>
+									<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a> </div>
+									<div class="item"><p><span th:text="${pageInfo.pageNum}"></span>/<span th:text="${pageInfo.pages}"></span></p></div>
+									<div class="item"><a th:href="@{/admin/types(pagenum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a></div>
+									<div class="right aligned item"><a th:href="@{/admin/types(pagenum=${pageInfo.pages})}">尾页</a></div>
+								</div>
+							</th>
+						</tr>
+						</tfoot>
+					</table>
+					<div class="ui success message" th:unless="${#strings.isEmpty(msg)}">
+						<i class="close icon"></i>
+						<div class="header">提示：</div>
+						<p th:text="${msg}">恭喜，操作成功！</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-
 	<!-- 底部 -->
 	<footer th:replace="_fragments :: footer"></footer>
 	<script th:replace="_fragments :: script"></script>
-
 <!-- 此处Bug还未处理 -->
 <script>
 	$('.menu.toggle').click(function (){
@@ -76,7 +73,6 @@
 	$('.ui.dropdown').dropdown({
 		on: 'hover'
 	});
-
 	/*消息提示关闭初始化*/
 	$('.message.close')
 		.on('click', function (){
