--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -86,7 +86,7 @@ body {
 }
 /* opacity  透明度*/
 .m-opacity-mini {
-	opacity: 0.85 !important;
+	opacity: 0.95 !important;
 }
 .m-opacity {
 	opacity: 0.75 !important;
@@ -162,4 +162,29 @@ body {
 		padding-left: 0 !important;
 		padding-right: 0 !important;
 	}
+}
+
+/*关于照片墙用的css*/
+.m-bg-type_outer {
+	display: block;
+	background-size: cover;
+	position: relative;
+	overflow: hidden;
+}
+.m-bg{
+	width: 100%;
+	height: 650px;
+	object-fit: cover;
+}
+.m-bg-class_cover {
+	width: 100%;
+	height: 750px;
+	line-height: 50px;
+	padding-left: 6px;
+	background-color: rgba(0, 0, 0, .60);
+	/*color: #FFFFFF;*/
+	/*font-size: 26px;*/
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
 }
