--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head(title)">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title th:replace="${title}">博客详情</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" />
     <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}"/>
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../static/css/animate.css" th:href="@{/css/animate.css}"/>
     <link rel="stylesheet" href="../static/lib/prism/prism.css" th:href="@{/lib/prism/prism.css}"/>
     <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css" th:href="@{/lib/tocbot/tocbot.css}"/>
+    <link rel="stylesheet" href="../static/lib/picture/css/jkresponsivegallery.css"
+          th:href="@{/lib/picture/css/jkresponsivegallery.css}"/>
 </head>
 
 <!-- 导航 -->
@@ -21,7 +23,8 @@
             <a href="#" th:href="@{/types/-1}" class="m-item m-mobile-hide item" th:classappend="${n==2} ? 'active'"><i class=" idea icon"></i>分类</a>
             <a href="#" th:href="@{/tags/-1}" class="m-item m-mobile-hide item" th:classappend="${n==3} ? 'active'"><i class=" tags icon"></i>标签</a>
             <a href="#" th:href="@{/archives}" class="m-item m-mobile-hide item" th:classappend="${n==4} ? 'active'"><i class=" clone icon"></i>归档</a>
-            <a href="#" th:href="@{/about}" class="m-item m-mobile-hide item" th:classappend="${n==5} ? 'active'"><i class=" info icon"></i>关于我</a>
+            <a href="#" th:href="@{/picture}" class="m-item m-mobile-hide item" th:classappend="${n==5} ? 'active'"><i class="image icon"></i>照片墙</a>
+            <a href="#" th:href="@{/about}" class="m-item m-mobile-hide item" th:classappend="${n==6} ? 'active'"><i class=" info icon"></i>关于我</a>
             <div class="right m-item item m-mobile-hide" >
                 <form name="search" action="#" method="post" th:action="@{/search}" target="_blank">
                     <div class="ui icon inverted transparent input m-margin-tb-tiny">
@@ -37,7 +40,7 @@
     </a>
 </nav>
 
-<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-maxssive m-opacity-mini animated fadeInUp">
+<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-maxssive m-opacity-footer animated fadeInUp">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column">
@@ -77,6 +80,7 @@
     <script src="../static/lib/tocbot/tocbot.min.js" th:src="@{/lib/tocbot/tocbot.min.js}"></script>
     <script src="../static/lib/qrcode/qrcode.min.js" th:src="@{/lib/qrcode/qrcode.min.js}"></script>
     <script src="../static/lib/waypoints/jquery.waypoints.min.js" th:src="@{/lib/waypoints/jquery.waypoints.min.js}"></script>
+    <script src="../static/lib/picture/js/jkresponsivegallery.js" th:src="@{/static/lib/picture/js/jkresponsivegallery.js}"/>
 </th:block>
 
 </body>
