--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 	<nav th:replace="_fragments :: menu(1)"></nav>
 	<!--中间内容-->
 	<!--css提供了-->
-	<div class="m-container m-padded-tb-big animated fadeInLeft" >
+	<div id="waypoint" class="m-container m-padded-tb-big animated fadeInLeft" >
 		<div class="ui container">
 			<div class="ui grid stackable m-opacity-mini">
 				<!-- 左边博客列表-->
@@ -142,7 +142,11 @@
 		</div>
 	</div>
 	<!-- 底部 -->
-
+	<div id="toolbar" class="m-padded m-fixed m-right-bottom" style="display: none">
+		<div class="ui vertical icon button ">
+			<div id="toTop-button" class="ui icon button" ><i class="chevron up icon"></i></div>
+		</div>
+	</div>
 	<footer th:replace="_fragments :: footer">
 	</footer>
 </body>
@@ -156,6 +160,20 @@
 	$('.menu.toggle').click(function (){
 		/* 将css样式进行切换 */
 		$('.m-item').toggleClass('m-mobile-hide');
+	});
+	var waypoint = new Waypoint({
+		element: document.getElementById('waypoint'),
+		handler: function(direction) {
+			if (direction == 'down') {
+				$('#toolbar').show(100);
+			} else {
+				$('#toolbar').hide(500);
+			}
+			console.log('Scrolled to waypoint!  ' + direction);
+		}
+	})
+	$('#toTop-button').click(function () {
+		$(window).scrollTo(0,500);
 	});
 </script>
 </html>
