--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -11,7 +11,7 @@
 <nav th:replace="_fragments :: menu(3)" ></nav>
 
 <!--中间内容-->
-<div  class="m-container-small m-padded-tb-big animated fadeIn">
+<div id="waypoint" class="m-container-small m-padded-tb-big animated fadeIn">
     <div class="ui container">
         <!--header-->
         <div class="ui top attached segment">
@@ -91,6 +91,12 @@
     </div>
 </div>
 
+<div id="toolbar" class="m-padded m-fixed m-right-bottom" style="display: none">
+    <div class="ui vertical icon button ">
+        <div id="toTop-button" class="ui icon button" ><i class="chevron up icon"></i></div>
+    </div>
+</div>
+
 <br>
 <br>
 
@@ -108,6 +114,21 @@
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
     });
+    var waypoint = new Waypoint({
+        element: document.getElementById('waypoint'),
+        handler: function(direction) {
+            if (direction == 'down') {
+                $('#toolbar').show(100);
+            } else {
+                $('#toolbar').hide(500);
+            }
+            console.log('Scrolled to waypoint!  ' + direction);
+        }
+    })
+    $('#toTop-button').click(function () {
+        $(window).scrollTo(0,500);
+    });
+
 
 </script>
 </body>
