--- a/src/main/resources/templates/picture.html
+++ b/src/main/resources/templates/picture.html
@@ -9,36 +9,38 @@
 	<!-- 导航 -->
 	<nav th:replace="_fragments :: menu(5)"></nav>
 	<!--顶部图片-->
-	<div class="m-bg-type_outer" style="width: 100%; height: 40%">
-		<img src="../static/images/picturebg.jpg" th:src="@{../static/images/picturebg.jpg}" alt="" class="ui m-bg image"
-			 style="width: 100%; height: 100%">
+	<div class="m-bg-type_outer" style="width: 100%;height: 40%">
+		<img src="../static/images/picturebg.jpg" th:src="@{/images/picturebg.jpg}" alt="" class="ui m-bg image" style="width: 100%;height: 100%">
 		<div class="m-bg-class_cover">
-			<div class="ui container" style="position: relative; bottom: -540px">
-				<div class="m-font-size-title m-right-bottom" align="center" style="font-family: 'STXingKai'">照片墙</div>
-				<div class="m-font-size-text-init-title m-margin-top" align="center">体胖还需勤跑步，人丑就该多读书</div>
+			<div class="ui container" style="position: relative ;bottom: -540px;">
+				<div class="m-font-size-title m-right-bottom" align="center" style="font-family:'STXingkai'">照片墙</div>
+				<div class="m-font-size-text-init-title m-margin-top" align="center">愿你走出半生，归来仍是少年</div>
 			</div>
 		</div>
+	</div>
 
-		<!--照片墙-->
-		<div id="picture-main">
-			<article class="thumb" th:each="picture : ${pictures}">
-				<div class="ma5-gallery">
-					<div class="rthumbnail">
-						<a href="../static/images/backimg1.jpg" th:href="@{${picture.pictureaddress}}">
-							<img class="picture-zmki_px" src="../static/images/backimg1.jpg" th:src="@{${picture.pictureaddress}}">
-						</a>
-						<div class="m-picture-text" th:text="${picture.picturename}">起风了</div>
-						<div  class="rcaption">
-							<div style="font-size: large;" th:text="${picture.picturename}">起风了</div>
-							<div style="font-size: 16px" class="m-margin-top" th:text="${picture.picturetime}">2020-02-02 &nbsp;深圳</div>
-							<p style="font-size: 16px" th:text="${picture.picturedescription}">我曾难自拔于世界之大，也沉迷于其中梦话</p>
-						</div>
+
+	<!--照片墙-->
+	<div id="picture-main">
+
+		<article class="thumb" th:each="picture : ${pictures}">
+			<div class="ma5-gallery">
+				<div class="rthumbnail">
+					<a href="../static/images/backimg1.jpg" th:href="@{${picture.pictureAddress}}">
+						<img class="picture-zmki_px" src="../static/images/backimg1.jpg" th:src="@{${picture.pictureAddress}}">
+					</a>
+					<div class="m-picture-text" th:text="${picture.pictureName}">起风了</div>
+					<div  class="rcaption">
+						<div style="font-size: large;" th:text="${picture.pictureName}">起风了</div>
+						<div style="font-size: 16px" class="m-margin-top" th:text="${picture.pictureTime}">2020-02-02 &nbsp;深圳</div>
+						<p style="font-size: 16px" th:text="${picture.pictureDescription}">我曾难自拔于世界之大，也沉迷于其中梦话</p>
 					</div>
 				</div>
-			</article>
+			</div>
+		</article>
 
-		</div>
 	</div>
+
 	<!-- 底部 -->
 	<footer th:replace="_fragments :: footer"></footer>
 
@@ -50,6 +52,9 @@
 	$('.menu.toggle').click(function (){
 		/* 将css样式进行切换 */
 		$('.m-item').toggleClass('m-mobile-hide');
+	});
+	$(function() {
+		$('.rthumbnail').responsivegallery();
 	});
 </script>
 </body>
