--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -13,7 +13,7 @@
     <div class="ui container">
         <div class="ui success large  message">
             <h3>Hi,</h3>
-            <p>朱一鸣，欢迎登录！</p>
+            <p>温伟忠，欢迎登录！</p>
         </div>
 
     </div>
