--- a/src/main/resources/templates/admin/pictures-input.html
+++ b/src/main/resources/templates/admin/pictures-input.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!--导航-->
-    <nav th:replace="admin/_fragments :: menu(3)"></nav>
+    <nav th:replace="admin/_fragments :: menu(4)"></nav>
     <br>
     <!--中间内容-->
     <div class="m-container-small m-padded-tb-big">
@@ -13,19 +13,31 @@
             <div class="ui attached pointing menu">
                 <div class="ui container">
                     <div class="right menu">
-                        <a href="#" th:href="@{/admin/tags/input}" class="teal active item">发布</a>
-                        <a href="#" th:href="@{/admin/tags}" class="item">列表</a>
+                        <a href="#" th:href="@{/admin/pictures/input}" class="teal active item">新增</a>
+                        <a href="#" th:href="@{/admin/pictures}" class="item">列表</a>
                     </div>
                 </div>
             </div>
             <div class="ui attached secondary segment">
-                <form action="#" th:object="${tag}" th:action="*{id}==null ? @{/admin/tags} : @{/admin/tags/{id}(id=*{id})}"
+                <form action="#" th:object="${picture}" th:action="*{id}==null ? @{/admin/pictures} : @{/admin/pictures/{id}(id=*{id})}"
                       method="post" class="ui form">
                     <input type="hidden" name="id" th:value="*{id}">
-                    <div class="required field">
+                    <div class="field">
                         <div class="ui left labeled input">
-                            <label class="ui teal basic label">名称</label>
-                            <input type="text" name="name" placeholder="标签名称" th:value="*{name}">
+                            <label class="ui teal basic label">图片名称</label>
+                            <input type="text" name="pictureName" placeholder="图片名称" th:value="*{pictureName}">
+                        </div>
+                        <div class="ui left labeled input">
+                            <label class="ui teal basic label">地点名称</label>
+                            <input type="text" name="pictureTime" placeholder="时间地点" th:value="*{pictureTime}">
+                        </div>
+                        <div class="ui left labeled input">
+                            <label class="ui teal basic label">图片地址</label>
+                            <input type="text" name="pictureAddress" placeholder="图片地址" th:value="*{pictureAddress}">
+                        </div>
+                        <div class="ui left labeled input">
+                            <label class="ui teal basic label">图片描述</label>
+                            <input type="text" name="pictureDescription" placeholder="图片描述" th:value="*{pictureDescription}">
                         </div>
                     </div>
                     <div class="ui error message"></div><!--显示错误信息-->
@@ -62,10 +74,10 @@
         $('.ui.form').form({
             fields: {
                 title: {
-                    identifier: 'name',
+                    identifier: 'pictureAddress',
                     rules: [{
                         type: 'empty',
-                        prompt: '请输入标签名称'
+                        prompt: '请输入图片地址'
                     }]
                 }
             }
