修改了一些细节，但是照片墙的bug还是存在

--- a/src/main/resources/templates/picture.html
+++ b/src/main/resources/templates/picture.html
@@ -45,7 +45,7 @@
 
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-	<script src="../static/lib/picture/js/jkresponsivegallery.js" th:src="@{/static/lib/picture/js/jkresponsivegallery.js}"/>
+	<script type="text/javascript" src="../static/lib/picture/js/jkresponsivegallery.js" th:src="@{/lib/picture/js/jkresponsivegallery.js}"/>
 <!-- 此处Bug还未处理 -->
 <script>
 	$('.menu.toggle').click(function (){
