--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -11,7 +11,7 @@
 <nav th:replace="_fragments :: menu(0)" ></nav>
 
 <!--中间内容-->
-<div id="waypoint" class="m-container-small m-padded-tb-big animated fadeIn">
+<div id="waypoint" class="m-container m-padded-tb-big animated fadeIn">
     <div class="ui container">
         <!--头部-->
         <div class="ui top attached segment">
