删除了照片墙功能，

--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -63,7 +63,7 @@
         </div>
         <div class="ui inverted section divider"></div>
         <p class="m-text-lined m-text-spaced m-text-thin">
-            Copyright © 2020
+            粤ICP备2020102794号
         </p>
     </div>
 </footer>
