--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -62,8 +62,8 @@
 		</div>
 	</div>
 	<!-- 底部 -->
-	<footer th:replace="_fragments :: footer"></footer>
-	<script th:replace="_fragments :: script"></script>
+	<footer th:replace="admin/_fragments :: footer"></footer>
+	<script th:replace="admin/_fragments :: script"></script>
 <!-- 此处Bug还未处理 -->
 <script>
 	$('.menu.toggle').click(function (){
